--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: black; 
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 2rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  display: flex;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.counter-card {
+  width: 500px;
+  height: 400px;
+  background-color: aliceblue;
+  border-radius: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result-field {
+  width: 80%;
+  height: 100px;
+  background-color: antiquewhite;
+border-radius: 1rem;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 3rem;
+}
+.btn-collection {
+  display: flex; 
+  justify-content: space-between;
+  width: 80%;
+}
+.btn {
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 1rem;
+
+font-size: 1rem;
+  border: none;
+}
+.decrement {
+  background-color: rgb(212, 212, 25);
+}
+.increment {
+  background-color: rgb(28, 228, 98);
+}
+.reset {
+  background-color: red;
+}
+
+.btn:hover {
+  transform: ;
 }
